--- a/Plotting Weather Patterns.ipynb
+++ b/Plotting Weather Patterns.ipynb
@@ -259,22 +259,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "electoral-burton",
+   "cell_type": "markdown",
+   "id": "apart-somerset",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-15a56db53c4d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-15a56db53c4d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <img src=\"map.png\" width=60 height=60>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "<img src=\"map.png\" width=60 height=60>"
+    "<img src=\"map.png\">"
    ]
   },
   {
@@ -288,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 12,
    "id": "second-administrator",
    "metadata": {},
    "outputs": [
@@ -368,7 +357,7 @@
        "4  USC00305310  2005-03-27    TMIN         -33"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 13,
    "id": "needed-cleaning",
    "metadata": {},
    "outputs": [],
@@ -404,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 14,
    "id": "compatible-april",
    "metadata": {},
    "outputs": [
@@ -511,7 +500,7 @@
        "[365 rows x 2 columns]"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 15,
    "id": "educational-commerce",
    "metadata": {},
    "outputs": [
@@ -644,7 +633,7 @@
        "[365 rows x 2 columns]"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 16,
    "id": "arbitrary-waterproof",
    "metadata": {},
    "outputs": [
